Changed ID to 145667532

--- a/generate-qr.html
+++ b/generate-qr.html
@@ -14,7 +14,7 @@
 
     <script>
       // Data to encode in the QR code (e.g., gym member ID)
-      let memberId = "GYM123457";
+      let memberId = "145667532";
 
       // Generate QR code
       let qrcode = new QRCode(document.getElementById("qrcode"), {
