h2 tag Olympic fitness

--- a/scan-qr.html
+++ b/scan-qr.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>QR Code Scanner</h1>
+    <h2>Olympic Fitness Gym</h2>
     <div id="reader"></div>
     <div id="result"></div>
     <button id="startBtn">Start Scanning</button>
