notif function syntax fixed

--- a/scan-qr.html
+++ b/scan-qr.html
@@ -87,7 +87,7 @@
           method: "POST",
           body: formdata,
         })
-          .then((responce) => responce.text())
+          .then((response) => response.text())
           .then((data) => {
             notif.innerHTML = data;
           });
